--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html {
     box-sizing: inherit;
 }
 
-body {
+.body {
     background-color: #ca8749;
+    max-width: 500px;
+    width: 100%;
+    margin: 32px auto;
 }
